# eliciting_suppressed_knowledge

./: .gitignore  README.md  mjc_notes.md  pyproject.toml  research_journal.md
nbs/: 02_TQA_regr_w_kv.ipynb  02b_TQA_regr_w_kv.ipynb  TQA_regr 3b.ipynb  TQA_regr.ipynb  TQA_regr_w_kv 3B.ipynb  TQA_regr_w_kv.ipynb
nbs/old/: 01_TQA_regr.ipynb  TQA_regr_1,5B.ipynb  TQA_regr_w_kv 3B copy.ipynb
