[project]
name = "eliciting-suppressed-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "activation-store",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "jaxtyping>=0.2.38",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
activation-store = { git = "https://github.com/wassname/activation_store.git" }

# [build-system]
# requires = ["setuptools>=61"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# packages = ["activation_store"]
