[project]
name = "eliciting-suppressed-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "activation-store",
    "autoawq>=0.2.6",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "jaxtyping>=0.2.38",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "skorch>=1.1.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
activation-store = { path = "../../elk/cache_transformer_acts", editable = true }
# activation-store = { git = "https://github.com/wassname/activation_store.git" }

# [build-system]
# requires = ["setuptools>=61"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# packages = ["activation_store"]
